k8s/apps/gearhawk/api-gearhawk/ns.yaml
apiVersion: v1
kind: Namespace
metadata:
  name: api-gearhawk
  annotations:
    operator.1password.io/auto-restart: "true"
