k8s/apps/gearhawk/api-gearhawk/deployment.yaml
apiVersion: apps/v1
kind: Deployment
metadata:
  name: api-gearhawk
spec:
  replicas: 2
  selector:
    matchLabels:
      app: api-gearhawk
  template:
    metadata:
      labels:
        app: api-gearhawk
    spec:
      containers:
        - name: api-gearhawk
          image: wjt40398/gearhawk:api-gearhawk-9d1ea28
          imagePullPolicy: IfNotPresent
          ports:
            - containerPort: 8787
          readinessProbe:
            tcpSocket:
              port: 8787
            initialDelaySeconds: 5
            periodSeconds: 10
          livenessProbe:
            tcpSocket:
              port: 8787
            initialDelaySeconds: 15
            periodSeconds: 20
          resources:
            requests:
              cpu: 250m
              memory: 512Mi
              ephemeral-storage: "1Gi"
            limits:
              cpu: 4
              memory: 8Gi
              ephemeral-storage: "5Gi"
      imagePullSecrets:
        - name: docker-secret
