k8s/apps/gearhawk/api-gearhawk/service.yaml
apiVersion: v1
kind: Service
metadata:
  name: api-gearhawk-svc
  annotations:
    argocd.argoproj.io/sync-wave: "1"
spec:
  selector:
    app: api-gearhawk
  ports:
    - name: http
      protocol: TCP
      port: 80
      targetPort: 8787
